Account for initial offset from element bounds to avoid jump

--- a/packages/react-resizable-panels-website/src/routes/Mobile/styles.module.css
+++ b/packages/react-resizable-panels-website/src/routes/Mobile/styles.module.css
@@ -28,5 +28,4 @@
 
 .ResizeHandle {
   flex: 0 0 2rem !important;
-  width: 2rem;
 }
